[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dialouge.gd" type="Script" id=1]

[node name="Dialouge" type="GraphNode"]
margin_right = 151.0
margin_bottom = 54.0
title = "Dialouge"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 135.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 30 )

[connection signal="close_request" from="." to="." method="_on_Dialouge_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Dialouge_resize_request"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
